Fix project stacking spacing

--- a/app/css/globals.scss
+++ b/app/css/globals.scss
@@ -18,5 +18,11 @@ body {
 }
 
 .sticky-card {
-    top: calc(var(--index) * 1.5rem);
+    top: calc(var(--index) * 2.5rem);
+}
+
+@media (min-width: 1024px) {
+    .sticky-card {
+        top: calc(var(--index) * 3rem);
+    }
 }
